# yoloapp_video

./: README.md  app_streamlit.py  main.py  pyproject.toml  requirements.txt
