[project]
name = "yolo-detect"
version = "0.1.0"
description = "Sistema de detección y conteo de objetos en videos usando YOLO11 con tracking BoTSORT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.3.226",
    "shapely>=2.0.0",
    "opencv-python>=4.8.0",
    "lap>=0.5.12",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = []
